# cereal

./: .gitignore  CMakeLists.txt  README.md  cereal.code-workspace
include/cereal/: cereal.hpp
src/: cereal.cpp
tests/: CMakeLists.txt  cerealtests.cpp
